--- a/project/requirements_cuda.txt
+++ b/project/requirements_cuda.txt
@@ -1,3 +1,4 @@
+accelerate==0.34.2
 aiofiles==23.2.1
 annotated-types==0.7.0
 anyio==4.6.0
@@ -46,12 +47,15 @@ orjson==3.10.7
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
+protobuf==5.28.2
+psutil==6.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydub==0.25.1
 Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-multipart==0.0.12
 pytz==2024.2
 PyYAML==6.0.2
@@ -61,6 +65,7 @@ rich==13.8.1
 ruff==0.6.8
 safetensors==0.4.5
 semantic-version==2.10.0
+sentencepiece==0.2.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
