--- a/tree_recognition/requirements.txt
+++ b/tree_recognition/requirements.txt
@@ -1,1 +1,19 @@
+absl-py==2.1.0
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.54.1
+grpcio==1.66.2
+kiwisolver==1.4.7
+Markdown==3.7
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+numpy==2.1.1
+packaging==24.1
 pillow==10.4.0
+protobuf==5.28.2
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+six==1.16.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+Werkzeug==3.0.4
