--- a/tree_recognition/requirements.txt
+++ b/tree_recognition/requirements.txt
@@ -42,6 +42,7 @@ sniffio==1.3.1
 starlette==0.38.6
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
+torchsummary==1.5.1
 typer==0.12.5
 typing_extensions==4.12.2
 uvicorn==0.31.0
