--- a/tree_recognition/requirements.txt
+++ b/tree_recognition/requirements.txt
@@ -17,6 +17,7 @@ httptools==0.6.1
 httpx==0.27.2
 idna==3.10
 Jinja2==3.1.4
+joblib==1.4.2
 kiwisolver==1.4.7
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -36,12 +37,15 @@ python-dotenv==1.0.1
 python-multipart==0.0.12
 PyYAML==6.0.2
 rich==13.9.1
+scikit-learn==1.5.2
+scipy==1.14.1
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.38.6
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
+threadpoolctl==3.5.0
 torchsummary==1.5.1
 typer==0.12.5
 typing_extensions==4.12.2
