--- a/thesizer/requirements_cuda12_linux.txt
+++ b/thesizer/requirements_cuda12_linux.txt
@@ -1,14 +1,41 @@
+accelerate==1.0.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.0
+attrs==24.2.0
+beautifulsoup4==4.12.3
+bitsandbytes==0.44.1
+bs4==0.0.2
 certifi==2024.8.30
 charset-normalizer==3.4.0
+dataclasses-json==0.6.7
 faiss-gpu-cu12==1.8.0.2
 filelock==3.13.1
+frozenlist==1.4.1
 fsspec==2024.2.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 huggingface-hub==0.25.2
 idna==3.10
 Jinja2==3.1.3
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.3
+langchain-community==0.3.2
+langchain-core==0.3.10
+langchain-text-splitters==0.3.0
+langsmith==0.1.134
+lxml==5.3.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
 networkx==3.2.1
 numpy==1.26.3
 nvidia-cublas-cu12==12.4.2.65
@@ -23,16 +50,29 @@ nvidia-cusparse-cu12==12.3.0.142
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.4.99
+orjson==3.10.7
 packaging==24.1
 pillow==10.2.0
+propcache==0.2.0
+psutil==6.0.0
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.23.4
+pypdf==5.0.1
+python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
+requests-toolbelt==1.0.0
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
-sentence-transformers==3.1.1
+sentence-transformers==3.2.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.35
 sympy==1.12
+tenacity==8.5.0
 threadpoolctl==3.5.0
 tokenizers==0.20.1
 torch==2.4.1+cu124
@@ -41,5 +81,7 @@ torchvision==0.19.1+cu124
 tqdm==4.66.5
 transformers==4.45.2
 triton==3.0.0
+typing-inspect==0.9.0
 typing_extensions==4.9.0
 urllib3==2.2.3
+yarl==1.14.0
