--- a/thesizer/requirements_cuda12_linux.txt
+++ b/thesizer/requirements_cuda12_linux.txt
@@ -28,6 +28,7 @@ jsonpointer==3.0.0
 langchain==0.3.3
 langchain-community==0.3.2
 langchain-core==0.3.10
+langchain-huggingface==0.1.0
 langchain-text-splitters==0.3.0
 langsmith==0.1.134
 lxml==5.3.0
