--- a/thesizer/requirements_cuda12_linux.txt
+++ b/thesizer/requirements_cuda12_linux.txt
@@ -5,14 +5,22 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.0
 attrs==24.2.0
+backoff==2.2.1
 beautifulsoup4==4.12.3
 bitsandbytes==0.44.1
 bs4==0.0.2
 certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.0
+click==8.1.7
+cryptography==43.0.1
 dataclasses-json==0.6.7
+emoji==2.14.0
+eval_type_backport==0.2.0
 faiss-gpu-cu12==1.8.0.2
 filelock==3.13.1
+filetype==1.2.0
 frozenlist==1.4.1
 fsspec==2024.2.0
 greenlet==3.1.1
@@ -24,20 +32,25 @@ idna==3.10
 Jinja2==3.1.3
 joblib==1.4.2
 jsonpatch==1.33
+jsonpath-python==1.0.6
 jsonpointer==3.0.0
 langchain==0.3.3
 langchain-community==0.3.2
 langchain-core==0.3.10
 langchain-huggingface==0.1.0
 langchain-text-splitters==0.3.0
+langdetect==1.0.9
 langsmith==0.1.134
 lxml==5.3.0
+Markdown==3.7
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 networkx==3.2.1
+nltk==3.9.1
 numpy==1.26.3
 nvidia-cublas-cu12==12.4.2.65
 nvidia-cuda-cupti-cu12==12.4.99
@@ -51,17 +64,24 @@ nvidia-cusparse-cu12==12.3.0.142
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.4.99
+olefile==0.47
 orjson==3.10.7
 packaging==24.1
 pillow==10.2.0
 propcache==0.2.0
 psutil==6.0.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 pypdf==5.0.1
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-iso639==2024.4.27
+python-magic==0.4.27
+python-oxmsg==0.0.1
 PyYAML==6.0.2
+RapidFuzz==3.10.0
 regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -69,10 +89,12 @@ safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
 sentence-transformers==3.2.0
+six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.35
 sympy==1.12
+tabulate==0.9.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
 tokenizers==0.20.1
@@ -84,5 +106,8 @@ transformers==4.45.2
 triton==3.0.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
+unstructured==0.15.14
+unstructured-client==0.26.0
 urllib3==2.2.3
+wrapt==1.16.0
 yarl==1.14.0
